@@ -1,7 +1,10 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright 1997-2009 Sun Microsystems, Inc. All rights reserved.
+ * Copyright 1997-2010 Oracle and/or its affiliates. All rights reserved.
+ *
+ * Oracle and Java are registered trademarks of Oracle and/or its affiliates.
+ * Other names may be trademarks of their respective owners.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common
@@ -13,9 +16,9 @@
  * specific language governing permissions and limitations under the
  * License.  When distributing the software, include this License Header
  * Notice in each file and include the License file at
- * nbbuild/licenses/CDDL-GPL-2-CP.  Sun designates this
+ * nbbuild/licenses/CDDL-GPL-2-CP.  Oracle designates this
  * particular file as subject to the "Classpath" exception as provided
- * by Sun in the GPL Version 2 section of the License file that
+ * by Oracle in the GPL Version 2 section of the License file that
  * accompanied this code. If applicable, add the following below the
  * License Header, with the fields enclosed by brackets [] replaced by
  * your own identifying information:
@@ -44,6 +47,7 @@ package org.openide.explorer.view;
 import java.lang.ref.WeakReference;
 import java.util.LinkedList;
 import java.util.List;
+import javax.swing.tree.TreeNode;
 import org.netbeans.junit.NbTestCase;
 import org.openide.nodes.AbstractNode;
 import org.openide.nodes.Children;
@@ -60,6 +64,7 @@ public class NodeListModelTest extends NbTestCase {
         super(name);
     }
 
+    @Override
     protected boolean runInEQ() {
         return true;
     }
@@ -114,6 +119,24 @@ public class NodeListModelTest extends NbTestCase {
         // childrenCount
         model.getSize();
     }
+
+    public void testIsRootIncluded() {
+        Node c = new AbstractNode(new CNodeChildren());
+        NodeListModel model = new NodeListModel();
+        model.setNode(c, true);
+
+        assertEquals(NO_OF_NODES + 1, model.getSize());
+
+        assertNode("Parent is first", c, model.getElementAt(0));
+        for (int i= 0; i < NO_OF_NODES; i++) {
+            assertNode(i + "th node", c.getChildren().getNodeAt(i), model.getElementAt(i + 1));
+        }
+    }
+
+    private static void assertNode(String msg, Node n, Object e) {
+        TreeNode v = Visualizer.findVisualizer(n);
+        assertEquals(msg, v, e);
+    }
     
     /*
      * Children for testNodesAreReferenced.
@@ -122,12 +145,13 @@ public class NodeListModelTest extends NbTestCase {
         public CNodeChildren() {
             List myKeys = new LinkedList();
             for (int i = 0; i < NO_OF_NODES; i++) {
-                myKeys.add(new Integer(i));
+                myKeys.add(Integer.valueOf(i));
             }
             
             setKeys(myKeys);
         }
         
+        @Override
         protected Node[] createNodes(Object key) {
             AbstractNode an = new AbstractNode(Children.LEAF);
             an.setName(key.toString());
